<?xml version="1.0"?>
<package format="3">
  <name>marine_acoustic_msgs</name>
  <version>2.0.2</version>
  <description>The marine_acoustic_msgs package, including messages for common
  underwater sensors (DVL, multibeam sonar, imaging sonar)
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD-3-Clause</license>

  <author email="amarburg@apl.washington.edu">Aaron Marburg</author>
  <author email="ivaughn@whoi.edu">Ian Vaughn</author>
  <author email="kris@seaward.science">Kris Krasnosky</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>
  <author email="roland@ccom.unh.edu">Roland Arsenault</author>

  <!-- ROS1 Dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">rospy</build_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">message_generation</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <depend condition="$ROS_VERSION == 1">rosbag_migration_rule</depend>

  <!-- ROS2 Dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 2">rclpy</build_depend>
  <build_export_depend condition="$ROS_VERSION == 2">rclpy</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- Common Dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>

    <!-- Bagfile migrations. Only tested in ROS1 -->
    <!-- Migrate old SonarImage type to ProjectedSonarImage. -->
    <rosbag_migration_rule rule_file="bmr/order00_projected_sonar_image.bmr"/>
    <!-- Rename all message types from hydrographic_msgs/acoustic_msgs
         to marine_msgs/marine_acoustic_msgs. -->
    <rosbag_migration_rule rule_file="bmr/order02_package_rename.bmr"/>
  </export>

</package>
