<?xml version="1.0"?>
<package format="3">
  <name>marine_sensor_msgs</name>
  <version>2.0.2</version>
  <description>The marine_sensor_msgs package, meant to contain messages for common
  underwater sensors (e.g., conductivity, turbidity, dissolved oxygen)
  </description>

  <maintainer email="lindzey@uw.edu">Laura Lindzey</maintainer>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD-3-Clause</license>

  <author email="amarburg@uw.edu">Aaron Marburg</author>
  <author email="lindzey@uw.edu">Laura Lindzey</author>
  <author email="roland@ccom.unh.edu">Roland Arsenault</author>

  <!-- ROS1 Dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">rospy</build_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <build_export_depend condition="$ROS_VERSION == 1">message_generation</build_export_depend>

  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <depend condition="$ROS_VERSION == 1">rosbag_migration_rule</depend>

  <!-- ROS2 Dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 2">rclpy</build_depend>

  <build_export_depend condition="$ROS_VERSION == 2">rclpy</build_export_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <!-- Common Dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>

    <!-- Bagfile migrations. Only tested in ROS1 -->
    <!-- Rename message types from hydrographic_msgs/environmental_msgs
      to marine_msgs/marine_sensor_msgs.-->
    <rosbag_migration_rule rule_file="bmr/order00_package_rename.bmr"/>
    <rosbag_migration_rule rule_file="bmr/RadarSector.bmr"/>
  </export>


</package>
